# TechWorkshop-L300-AI-Apps-and-agents

.github/workflows/: deploy-acr
src/: chat_app.py  pyproject.toml
src/a2a/agent/: product_management_agent.py
src/a2a/api/: chat.py
src/app/agents/: customerLoyaltyAgent_initializer.py  interiorDesignAgent_initializer.py  inventoryAgent_initializer.py
src/prompts/: InventoryAgentPrompt.txt  ShopperAgentPrompt.txt
